# Bench

./: .gitignore  Cargo.toml  bench.sh  mult.R
Chapel/: add.chpl  det.chpl
D/: d  dub.json
D/source/: app.d
Julia/: mul.jl
Legacy/Julia/: add.jl
Legacy/New/: array.rs
Legacy/Old/: bench.sh
Legacy/Python/: det.py  mul.py
Legacy/R/: det.R
Legacy/data/: inv.csv  inv.md
Legacy/diagonalize/: Cargo.toml
Legacy/total/: Cargo.toml  bench.sh
New/: array.cpp
Python/: inv.py
R/: add.R  det.R  inv.R  mul.R  mult_f.R  mult_m.R
Rust/: Cargo.toml
Rust/src/: main.rs
data/: add.csv  add.md  det.csv  det.md  inv.csv  inv.md  mul.csv  mul.md  mult.md  mult_col.md  mult_f.md  mult_m.md  mult_new.md  mult_row_col.md  plot.R  sub.md
data/figure/: .Rhistory  plot.R
diagonalize/: Cargo.toml
diagonalize/bench/: gram_schmidt.md  gram_schmidt2.md  gram_schmidt3.md  gram_schmidt_desktop.md  gram_schmidt_final.md  julia.md  mark1.md  mat_mul.md  plot.py  rust_multi.md  rust_multi_recursion.md  rust_single.md
diagonalize/benches/: gram.rs
diagonalize/julia_diag/: diag.jl
diagonalize/numpy_diag/: diag.py
diagonalize/src/: main.rs
new/: Cargo.toml  bench.sh
new/bench/: det_10.md  det_100.md  det_1000.md  det_200.md  det_300.md  det_400.md  det_50.md  det_500.md  matmul_10.md  matmul_100.md  matmul_1000.md  matmul_200.md  matmul_300.md  matmul_400.md  matmul_500.md
new/bin_cpp/: det  matmul
new/src/cpp/: det.cpp  matmul.cpp
new/src/py/: det.py  matmul.py
src/: main.rs
total/julia/: add.jl  det.jl  inv.jl  mul.jl
total/python/: add.py  inv.py  (+3 more)
(+37 files in other folders)
