[package]
name = "new"
version = "0.1.0"
authors = ["Axect <axect@outlook.kr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.peroxide]
version = "0.21"
features = ["O3"]


[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
